--- a/4.linear_models_part2/slides/slideslinearmodelsPart2.Rnw
+++ b/4.linear_models_part2/slides/slideslinearmodelsPart2.Rnw
@@ -54,414 +54,7 @@ setPar()
   \end{frame}
 } 
 
-\begin{frame}{If you get bored}
-  \begin{itemize}
-    \item Go to the last slide for bonus exercises
-    \item Work on code for your research and ask question during exercise time
-    \item But try and keep an eye out, just in case
-  \end{itemize}
-  
-  \begin{center}
-    \includegraphics[height=0.5\textheight]{Figures/too-easy-whats-next.jpg}
-  \end{center}
-\end{frame}
-%%%%%%%%%%%
 
-\begin{frame}{Disclaimer}
-  \begin{itemize}
-    \item Assume you got lectures about statistics and
-       \begin{itemize}
-        \item know why we need statistics
-        \item have heard of the general philosophy
-       \end{itemize}
-    \item We may simplify to focus on practical aspects
-    \item Correct us if we say something completely awful
-  \end{itemize}
-  
-\end{frame}
-%%%%%%%%%%%
-
-\section{Statistical inference}%very general, still simplistic
-
-\begin{frame}{General approach}
-
-\begin{center}
-  \begin{tikzpicture}
-    \node (sq) at (0,-1) {\color{red}{1. Scientific question}};
-    \pause
-    \node (mo) at (0,-2) {2. Model and Statistical question};
-    \draw[->, thick] (sq)--(mo);
-    \pause
-    \node (dac) at (6,-2) {\color{red}{3. Data collection}};
-    \draw[<->, thick] (mo)--(dac);
-    \pause
-    \node (est) at (0,-3) {4. Estimation};
-        \draw[->, thick] (mo)--(est);
-    \node (unc) at (0,-3.5) {4.b Uncertainty and statistical significance};
-    \pause
-    
-    \node (che) at (0,-5) {5. Diagnostic, check assumptions, prediction};
-        \draw[->, thick] (unc)--(che);
-    \draw[->, thick] (che.west) to [out=150, in=210] (mo.west);
-
-    \pause
-    \node (int) at (0,-6) {\color{red}{6. Interpret and think about the biology}};
-        \draw[->, thick] (che)--(int);
-
-  \draw[rounded corners, color=blue] (-4.5,-1.5) rectangle (4,-5.5);
-  \node[anchor=north west] (r) at (-4.5,-1.5) {\includegraphics[width=0.1\textwidth]{Figures/r}};
-  \end{tikzpicture}
-  \end{center}
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{Reminder t.test}
-  
-  \pause
-  <<>>=
-    data("iris")
-  @
-
-  <<eval=FALSE>>=
-    str(iris)
-    plot(iris)
-  @
-  
-  \begin{enumerate}
-    \item \color{red}{Scientific question}: Are the taxa "setosa" and "versicolor" different species?
-  \pause
-    \item Model and stat question:
-      \begin{itemize}
-        \item Model:
-          \begin{itemize}
-            \item There is an intrinsic/expected sepal length value for a species; an individual value is the sum of this expectation and a random Gaussian deviation.
-            \item $y_i = \mu_{species_i} + \epsilon_i$ with  $\epsilon \sim N(0,\sigma^2)$
-            \item t-test
-          \end{itemize}
-        \pause
-        \item Statistical question: 
-          \begin{itemize}
-            \item Does sepal length \textbf{differ significantly} between the two taxa \textbf{in our sample}?
-            \item Is the observed difference between taxa likely if both taxa have the same intrinsic/expected value?
-          \end{itemize}
-        \end{itemize}
-      \item Data collection
-    \end{enumerate}
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{Reminder t.test}
-    One t-test for sepal length between \textit{setosa} and \textit{versicolor}:
-  <<eval=TRUE>>=
-    t.test(x = iris$Sepal.Length[iris$Species == "setosa"],
-          y = iris$Sepal.Length[iris$Species == "versicolor"])
-  @
-  
-\end{frame}
-%%%%%%%%%%%
-
-% \begin{frame}[fragile]{Reminder t.test: Are they different?}
-% 
-%   <<boxplot, fig.width=5, fig.height=5, out.width='0.5\\textwidth', eval=FALSE>>=
-%   boxplot(Sepal.Length ~ Species, 
-%           data = iris[iris$Species %in% c("setosa","versicolor"),],
-%           drop = TRUE, ylab="Sepal length", xlab="Species")
-%   @
-% \begin{columns}
-% \begin{column}{0.5\textwidth}
-% <<boxplot2, fig.width=5, fig.height=5, out.width='0.9\\textwidth', echo=FALSE>>=
-%   boxplot(Sepal.Length ~ Species, 
-%           data = iris[iris$Species %in% c("setosa","versicolor"),],
-%           drop = TRUE, ylab="Sepal length", xlab="Species")
-%   @
-% \end{column}
-% \begin{column}{0.5\textwidth}
-%   \begin{itemize}
-%     \item Means: 5.006 vs. 5.936
-%     \item Standard deviation: 0.35 and 0.52
-%     \item Standard error (SD/ $\sqrt n$): 0.05 and 0.07
-%   \end{itemize}
-% \end{column}
-% \end{columns}
-% \end{frame}
-% %%%%%%%%%%%
-
-\begin{frame}[fragile]{When do we know it is different?}
-
-\begin{enumerate}
-  \setcounter{enumi}{3}
-  \item Statistical estimation
-  \begin{itemize}
-    \item a Estimation
-      \begin{itemize}
-        \item Cannot know true difference $\mu_{species_1} - \mu_{species_2}$
-        \item Estimated difference $= \color{red}{\text{Mean}_1 - \text{Mean}_2 }$
-        \item Difference contains random variation
-      \end{itemize}
-    \item b Quantify uncertainty / Statistical significance
-      \begin{itemize}
-        \item $
-      t = \frac{\color{red}{\text{Mean}_1 - \text{Mean}_2}}{\text{\color{orange}Variation}}
-      \frac{\sqrt{{\text{\color{blue}{Sample Size}}}}}{\sqrt{2}}
-      $
-        \item We know exactly how t is distributed when $\mu_{species_1} - \mu_{species_2} = 0$
-        \item Hence we know probability of $\geq t$ if $\mu_{species_1} - \mu_{species_2} = 0$ ($p$-value)
-        \item Can derive confidence interval and standard error
-      \end{itemize}
-  \end{itemize}
-\end{enumerate}
-
-\pause
-Less uncertainty with
-  \begin{itemize}
-    \item \color{red}{Larger absolute difference}
-    \item \color{orange}{Smaller variability}
-    \item \color{blue}{Larger sample size}
-  \end{itemize}
-
-
-\end{frame}
-%%%%%%%%%%%
-  
-\begin{frame}[fragile]{When do we know it is different? Simulations}
-\pause
-\textbf{\color{red}{1. Larger absolute difference}}
-<<>>=
-nbsim <- 1000
-pdistri_large <- vector(length = nbsim)
-pdistri_small <- vector(length = nbsim)
-for (i in 1:nbsim)
-  {
-  x1 <- rnorm(n = 10, mean = 2, sd = 1)
-  x2 <- rnorm(n = 10, mean = 4, sd = 1) #large diff
-  x3 <- rnorm(n = 10, mean = 2.5, sd = 1) #small diff
-  out_large <- t.test(x1, x2)
-  out_small <- t.test(x1, x3)
-  pdistri_large[i]<-out_large$p.value
-  pdistri_small[i]<-out_small$p.value
-}
-@
-
-\textbf{How would you visualize these two vectors?}
-\end{frame}
-%%%%%%%%%%
-\begin{frame}[fragile]{When do we know it is different?}
-\centering
-<<comphist1, dev='pdf', fig.width=14, out.height='0.5\\textheight'>>=
-par(mfrow=c(1,2), cex=2)
-hist(pdistri_large, xlim=c(0,1),
-     main=paste("Prop signif=",mean(pdistri_large<0.05)))
-hist(pdistri_small, xlim=c(0,1),
-     main=paste("Prop signif=",mean(pdistri_small<0.05)))
-par(mfrow=c(1,1))
-@
-
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{When do we know it is different? Try it!}
-
-\begin{alertblock}{Exercise}
-Check the effect of {\color{orange}{smaller variability}} and/or {\color{blue}{larger sample size}}.
-\end{alertblock}
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{By the way, what are these p-values?}%focus on p-value criticized
-
-\textit{Probability for a summary statistic to be greater or equal to the observed summary statistic, \textbf{when the null-hypothesis of a given statistical model is true.}}
-
-\pause
-
-\begin{exampleblock}{Properties}
-  \begin{itemize}
-    \item Depends on the null-hypothesis ($H_0$) of a given model with assumptions
-    \item Uniform distribution under $H_0$ \dots
-    \item \dots hence proportion(significance under $H_0$) = significance threshold
-  \end{itemize}
-\end{exampleblock}
-\pause
-
-<<eval=FALSE>>=
-  hist( runif(n = 10000, min = 0, max=1) )
-@
-
-\pause
-\textbf{NB: Focus on $p$-value criticized, but common and they are no more evil than other misused statistics!}
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{T-test exercise: p-values and simulations}
-
-<<eval=FALSE>>=
-t.test(x = ..., y=...., var.equal = TRUE)
-t.test(x = ..., y=...., var.equal = FALSE)
-@
-
-What if variances are different by chance only?
-<<>>=
-set.seed(1234)
-var(rnorm(20, mean = 0, sd = 1))
-var(rnorm(20, mean = 0, sd = 1))
-@
-
-\begin{alertblock}{Exercise}
-  What option is more correct for var.equal?
-\end{alertblock}
-
-\end{frame}
-%%%%%%%%%%%
-\section{t-test, ANOVA, regression: all is one, one is all}
-
-\begin{frame}[fragile]{A small example}
-
-Animal behavior in response to weather
-
-<<a0,echo=FALSE, results='hide', eval=FALSE>>=
-set.seed(125)
-weather <- c(rep("sunny", 30), rep("rainy", 5))
-activity <- 5 + rnorm(35, 0,1) + 1*(weather=="rainy")
-
-dat.behav <- data.frame(weather=weather, activity = activity)
-write.csv(dat.behav, file = "datbehav.csv", row.names = FALSE)
-@
-
-Load data:
-<<eval=FALSE>>=
-getwd()
-setwd()
-@
-
-<<a1>>=
-dat.behav <- read.csv(file = "datbehav.csv") # path to file
-@
-
-\pause
-STEP 1: have a look at your data
-<<eval=FALSE>>=
-str(dat.behav)
-summary(dat.behav)
-plot(dat.behav)
-@
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}[fragile]{t-test}
-<<>>=
-
-fitstudent <- t.test(x = dat.behav$activity[dat.behav$weather==
-                                              "rainy"],
-                     y = dat.behav$activity[dat.behav$weather==
-                                              "sunny"],
-                     var.equal = TRUE)
-print(fitstudent)
-@
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{t-test, graphically}
-\textbf{Difference between means}
-\centering
-<<echo=FALSE>>=
-plot(x=c(rnorm(sum(dat.behav$weather=="sunny"), mean = 1, sd = 0.02),
-         rnorm(sum(dat.behav$weather=="rainy"), mean = 2, sd = 0.02)),
-     y =dat.behav$activity,
-     ylim=c(0,max(dat.behav$activity)), xaxt="n", xlim=c(0.5, 2.5), 
-     xlab="Weather", ylab="activity", pch=16, cex=2, col=rgb(1,0,0,0.5))
-axis(side = 1, at = c(1,2), labels = c("sunny", "rainy"))
-arrows(x0 = 1.5, y0=mean(dat.behav$activity[dat.behav$weather=="rainy"]),
-       y1=mean(dat.behav$activity[dat.behav$weather=="sunny"]), code=3, col = "dark red", lwd=5)
-arrows(x0=0.7, x1=1.3, y0=mean(dat.behav$activity[dat.behav$weather=="sunny"]), code=0, col = "red", lwd=5)
-arrows(x0=1.7, x1=2.3, y0=mean(dat.behav$activity[dat.behav$weather=="rainy"]), code=0, col = "red", lwd=5)
-@
-\end{frame}
-%%%%%%%%%%
-
-\begin{frame}[fragile]{ANOVA} 
-
-<<>>=
-
-fitanova <- aov(data = dat.behav, formula = activity ~ weather)
-summary(fitanova)
-@
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{ANOVA, graphically}
-\textbf{Variance decomposition}
-\centering
-<<echo=FALSE>>=
-xpos <- c(rnorm(sum(dat.behav$weather=="sunny"), mean = 1, sd = 0.06),
-         rnorm(sum(dat.behav$weather=="rainy"), mean = 2, sd = 0.06))
-plot(x=xpos,
-     y =dat.behav$activity,
-     ylim=c(0,max(dat.behav$activity)), xaxt="n", xlim=c(0.5, 2.5), 
-     xlab="Weather", ylab="activity", pch=16, cex=2, col=rgb(1,0,0,0.5))
-axis(side = 1, at = c(1,2), labels = c("sunny", "rainy"))
-
-arrows(x0=0.7, x1=1.3, y0=mean(dat.behav$activity[dat.behav$weather=="sunny"]), code=0, col = "red", lwd=5, lty=2)
-arrows(x0=1.7, x1=2.3, y0=mean(dat.behav$activity[dat.behav$weather=="rainy"]), code=0, col = "red", lwd=5, lty=2)
-arrows(x0=0.5, x1=2.5, y0=mean(dat.behav$activity), code=0, col = "blue", lwd=5, lty=2)
-
-arrows(x0 =xpos, y0=c(rep(mean(dat.behav$activity[dat.behav$weather=="sunny"]), times=length(dat.behav$activity[dat.behav$weather=="sunny"])), rep(mean(dat.behav$activity[dat.behav$weather=="rainy"]), times=length(dat.behav$activity[dat.behav$weather=="rainy"]))),
-       y1=dat.behav$activity, code=0, col="dark red")
-arrows(x0=c(1,2), y0=rep(mean(dat.behav$activity), times=2),
-       y1=c(mean(dat.behav$activity[dat.behav$weather=="sunny"]),
-        mean(dat.behav$activity[dat.behav$weather=="rainy"])),
-       col="dark blue", lwd=8, code=0)
-
-@
-\end{frame}
-%%%%%%%%%%
-
-\begin{frame}[fragile]{Linear regression}
-
-<<>>=
-fitlm <- lm(data = dat.behav, formula = activity ~ weather)
-summary(fitlm)
-@
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}[fragile]{Regression, graphically}
-\textbf{Rate of change}
-\centering
-<<echo=FALSE>>=
-plot(x=c(rnorm(sum(dat.behav$weather=="sunny"), mean = 1, sd = 0.02),
-         rnorm(sum(dat.behav$weather=="rainy"), mean = 2, sd = 0.02)),
-     y =dat.behav$activity,
-     ylim=c(0,max(dat.behav$activity)), xaxt="n", xlim=c(0.5, 2.5), 
-     xlab="Weather", ylab="activity", pch=16, cex=2, col=rgb(1,0,0,0.5))
-axis(side = 1, at = c(1,2), labels = c("sunny", "rainy"))
-arrows(x0=0.7, x1=1.3, y0=mean(dat.behav$activity[dat.behav$weather=="sunny"]), code=0, col = "red", lwd=5)
-arrows(x0=1.7, x1=2.3, y0=mean(dat.behav$activity[dat.behav$weather=="rainy"]), code=0, col = "red", lwd=5)
-abline(a = coef(fitlm)[1]+2*coef(fitlm)[2], b=-coef(fitlm)[2], lwd=5, col="dark red")
-@
-\end{frame}
-%%%%%%%%%%
-
-
-\begin{frame}[fragile]{NB: aov() vs. anova()}
-
-<<eval=FALSE>>=
-aov(data = dat.behav, formula = activity ~ weather)
-anova(fitlm)
-@
-
-\end{frame}
-%%%%%%%%%%%
-
-\begin{frame}{All is one\dots}
-\pause
-  \begin{block}{\dots but \texttt{lm()} rules!}
-    \begin{itemize}
-      \item t-test, ANOVA, regression and others can be mathematically equivalent
-      \item In R, \texttt{lm()} and related functions can do them all\dots
-      \item \dots and much more!
-    \end{itemize}
-  \end{block}
-\end{frame}
-%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -690,6 +283,28 @@ write.csv(Cdata, file = "Cdata.csv", row.names = FALSE)
     \item Write your own code to obtain a prediction from a lm (that is, a simpler version of the predict function), with confidence interval. (extra toughness: do it using the matrix formulation of the analytical solution to a linear model)
   \end{enumerate}
 \end{alertblock}
+\end{frame}
+%%%%%%%%%%%
+
+
+\section{Feedback wanted!}
+
+\begin{frame}{What do you want to learn about?}
+
+\begin{alertblock}{Topics}
+  \begin{itemize}
+    \item 
+  \end{itemize}
+\end{alertblock}
+
+\pause
+
+\begin{alertblock}{Do you like it? What can we improve?}
+  \begin{itemize}
+    \item Is it too fast
+  \end{itemize}
+\end{alertblock}
+
 \end{frame}
 %%%%%%%%%%%
 
